<resources>
    <string name="app_name">TamTime</string>

    <string name="home">Accueil</string>
    <string name="all_infos">Infos</string>
    <string name="all_lines">Lignes</string>
    <string name="all_stops">Arrêts</string>
    <string name="all_itinary_favs">Mes Trajets</string>
    <string name="all_stops_favs">Mes Arrêts</string>
    <string name="nearby_stop">Arrêts Proches</string>
    <string name="maps">La Carte</string>
    <string name="reports">Les signalements</string>

    <string name="one_line">Ligne</string>
    <string name="no_favorite_stop">Pas d\'arrets favoris…</string>
    
    <string name="hint_search_welcome">Rechercher un arrêt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="fav_stops">Arrêts Favoris</string>
    <string name="line_choice">Choisissez une ligne</string>

    <string name="waiting_for_fix">En attente de données GPS …</string>
    <string name="gps_disabled">GPS désactivé</string>
    <string name="please_enable_gps">Pour vous permettre de connaitre les arrêts proches, veuillez activer le GPS.</string>
    <string name="no_perm_gps">Permission GPS refusée</string>
    <string name="please_autorise_gps">Pour vous permettre de connaitre les arrêts proches, veuillez nous accorder la permission d\'accéder au GPS.</string>
    <string name="OK">OK</string>
    <string name="no_nearby">Pas d\'arrêt à proximité.</string>

    <string name="post_report">Signaler un évenement</string>
    <string name="no_report">Pas d\'évenement signalé…</string>
    <string name="choose_report_category">Choisissez le type d\'évenement</string>
    <string name="confirm_report_title">Confirmation</string>
    <string name="create_report">Voulez vous vraiment signaler l\'evenement %1$s à l\'arret %2$s?</string>
    <string name="confirm_report">Voulez vous vraiment confirmer l\'evenement %1$s à l\'arret %2$s?</string>
    <string name="input_report">Décrivez l\'évenement</string>
    <string name="certainty">Certitude %s</string>
    <string name="ago">il y a %s</string>
    <plurals name="report">
        <item quantity="one">Evenement</item>
        <item quantity="other">Evenements</item>
    </plurals>
    <string name="disrupt">Incidents</string>
    <string name="show_disrupt">Afficher les incidents</string>
    <string name="none"></string>
    <string name="yes">OUI</string>
    <string name="no">NON</string>

    <string name="request_sucessful">Votre requête a été prise en compte.</string>
    <string name="request_unsucessful">Une erreur est surevenue lors de l\'envoi.</string>
    <string name="request_already_confirmed">Vous avez déjà confirmé cet évenement.</string>
    <string name="request_throttled">Veuillez patienter quelques instant avant d\'envoyer un nouveau signalement.</string>


    <string name="download_title">Téléchargement des horaires…</string>
    <string name="ask_download_title">Téléchargement requis</string>
    <string name="ask_download_content">Pour vous permettre d\'accèder au temps théoriques, nous avons besoin de télécharger des données supplémentaires.\nVeuillez vous assurez d\'avoir une connection stable avant de lancer le téléchargement.</string>

    <string name="force_dl">Télécharger les horaires théoriques.</string>
    <string name="force_dl_content">Permet de lancer le téléchargement des horaires.</string>

    <string name="settings">Paramètres</string>
    <string name="app_info">A propos</string>

    <string name="license">License</string>
    <string name="donate">Donation</string>
    <string name="donate_summary">Cliquer ici pour supporter notre travail !</string>
    <string name="source_code">Github</string>
    <string name="source_code_summary">Accèder au code source</string>
    <string name="version">Version de l\'application</string>

    <string name="add_stop_to_homepage">Ajouter cet arrêt sur l\'acceuil</string>
    <string name="mark_stop">Noter cet arrêt</string>
    <string name="check_mark_stop">Note de cet arrêt</string>
    <string name="check_weather">La méteo de cet arrêt</string>


    <string name="github" translatable="false">https://github.com/flyingrub/TamTime</string>
    <string name="license_type" translatable="false">GNU General Public License 2</string>
    <string name="donate_url" translatable="false">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=6DE8SFMJKRVK2</string>
    <string name="map_print_selection" translatable="false">Selection des lignes à afficher</string>
    <string name="tram" translatable="false">Tram</string>
    <string name="bus" translatable="false">Bus</string>
</resources>
